# mandelbrot

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml
src/: Mandelbrot.cpp  mandelbrot.cpp
